--- a/style.css
+++ b/style.css
@@ -1,11 +1,83 @@
 *{font-family: 'Work Sans', sans-serif;}
+.header-container{
+    background-color:rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+
+}
 .nav-container{
     display: flex;
     justify-content: space-between;
+    text-align: center;
+    align-items: center;
 }
 .header-menu{
     display: flex;
     gap: 30px;
+    font-size: 1.125rem;
+    font-weight: 500;
+   
+    
+}
+nav li{
+    list-style: none;
+   
+}
+
+nav li a{
     text-decoration: none;
+    color: #424242;
+    
+}
+.logo{
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0px auto;
+}
+.banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+    color: #131313;
+}
+.banner-description{
+    font-size: 1rem;
+    line-height: 1.625rem;
+    color: #131313;
+}
+.btn-primary{
+    font-size: 1.25rem;
+    color: white;
+    background-color: #FF900E;
+    border-radius: 8px;
+    padding: 20px 25px;
+    border:0px;
+
+}
+.banner img{
+    width: 100%;
+    margin: 20px;
+}
+
+/*responsie for mobile/small device*/
+
+@media screen and (max-width: 576px) {
+    .header-container{
+        padding: 20px;
+    }
+    .nav-container{
+        flex-direction: column;
+    }
+}
+/*responsie for tablet/medium device*/
+@media screen and (min-width:576.2px) and (max-width:960px){
+    .nav-container{
+        flex-direction: column;
+    }
+    .header-container{
+        padding: 20px 50px;
     
 }
