--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 *{font-family: 'Work Sans', sans-serif;}
+
+/*header section*/
 .header-container{
     background-color:rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
@@ -60,6 +62,43 @@ nav li a{
 .banner img{
     width: 100%;
     margin: 20px;
+}
+/*main*/
+.main{
+    max-width: 1440px;
+    margin: 0px auto;
+}
+/*teams section*/
+.team-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.team-content{
+    
+   padding-right: 70px;
+   padding-left: 70px;
+
+}
+.span1{
+    font-size: 2.81rem;
+    font-weight: 500;
+    color: #727272;
+}
+.span2{
+    font-size: 2.18rem;
+    color: #131313;
+    font-weight: 700;
+}
+.span3{
+    color: #FF900E;
+    font-size: 2.18rem;
+    font-weight: 700;
+}
+.team-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.2rem;
 }
 
 /*responsie for mobile/small device*/
