--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav li a{
 /*main*/
 .main{
     max-width: 1440px;
-    margin: 0px auto;
+    margin: 70px auto;
 }
 /*teams section*/
 .team-section{
@@ -101,15 +101,87 @@ nav li a{
     gap: 1.2rem;
 }
 
+/* fact section */
+.fact-box-container{
+    display: flex;
+    justify-content: space-around;
+  
+}
+#fact-description{
+    margin-top: 10px;
+    margin-bottom: 90px;
+}
+#fact-title{
+    margin-bottom: 0px;
+}
+.fact-box{
+    border-radius: 8px;
+border: 1px solid #FF900E;
+
+text-align: center;
+padding: 30px;
+
+}
+.fact-stats{
+    font-weight: 600;
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+ 
+}
+.fact-name{
+    font-weight: 600;
+    color: #727272;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+  /* sponspors */
+
+  .sponspors{
+    display: flex;
+        justify-content: space-around;
+        margin-top: 50px;
+  }
+  .sponspors-section{
+    text-align: center;
+  }
+  #sponspors-title{
+    margin-bottom: 0px;
+    margin-top: 100px;
+  }
+  #sponspors-description{
+    margin-top: 10px;
+  }
+
+  .sponspors img{
+    width: 165px;
+    height: 50px;
+  }
+
+
 /*responsie for mobile/small device*/
 
 @media screen and (max-width: 576px) {
     .header-container{
         padding: 20px;
     }
-    .nav-container{
+    .nav-container, .team-section, .fact-box-container, .sponspors{
         flex-direction: column;
     }
+    .team-img{
+        grid-template-columns: 1fr;
+    }
+    .fact-box-container{
+        
+        gap: 20px;
+    }
+    .fact-section, .sponspors-section{
+        padding: 20px;
+    }
+    .sponspors{
+        gap: 120px;
+       align-items: center;
 }
 /*responsie for tablet/medium device*/
 @media screen and (min-width:576.2px) and (max-width:960px){
@@ -119,4 +191,7 @@ nav li a{
     .header-container{
         padding: 20px 50px;
     
+}
+.team-section{
+    flex-direction: column;
 }
